--- a/glide.yaml
+++ b/glide.yaml
@@ -2,3 +2,5 @@ package: github.com/t11e/go-pebbleclient
 import:
 - package: github.com/pkg/errors
   version: ~>0.2.0
+- package: github.com/stretchr/testify
+  version: 1.1.x
