--- a/glide.yaml
+++ b/glide.yaml
@@ -3,10 +3,11 @@ import:
 - package: github.com/pkg/errors
   version: ~>0.2.0
 - package: github.com/stretchr/testify
-  version: 1.1.x
+  version: master
 - package: github.com/ernesto-jimenez/httplogger
   version: master
 - package: golang.org/x/net
   subpackages:
   - context/ctxhttp
   - context
+- package: github.com/vektra/mockery
