Add backoff to HTTP requests, via context deadline.

--- a/glide.yaml
+++ b/glide.yaml
@@ -11,3 +11,4 @@ import:
 - package: github.com/vektra/mockery
 - package: github.com/pkg/errors
   version: ^0.8.0
+- package: github.com/jpillora/backoff
